fixed categories not showing in mobile push menu * and updated styling to be full width click zone, and toggle subcategories

--- a/app/styles/components/th/_mobile-menu.scss
+++ b/app/styles/components/th/_mobile-menu.scss
@@ -17,7 +17,7 @@
     > li {
         > a {
             padding-left : 0;
-            display      : inline-block;
+            display      : block;
         }
     }
 
@@ -38,5 +38,8 @@
         line-height    : 17px;
         border-bottom  : 1px solid map-get($colors, border);
         font-size      : 1.4rem;
+        &--sub {
+            background-color:#efefef;
+        }
     }
 }
